k8s/development/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-nginx
  template:
    metadata:
      labels:
        app: web-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.4 
          imagePullPolicy: Always
          resources:
            requests:
              memory: "10Mi"
              cpu: "250m"
            limits:
              memory: "10Mi"
              cpu: "250m"
          ports:
          - containerPort: 80
