k8s/development/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: server
